[package]
name = "routercfg"
version = "0.1.0"
authors = ["tommy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.6"
rustyline = "6.1.2"
lazy_static = "1.4.0"
pretty-hex = "0.1.1"
thiserror = "1.0"
anyhow = "1.0"